Add governed connector policy set replacement
